Fix applicant name alignment in mobile list

--- a/src/pages/Applicant/List/Applicants/styles.module.scss
+++ b/src/pages/Applicant/List/Applicants/styles.module.scss
@@ -37,6 +37,7 @@
 
       .name {
         margin: 0 0 $normalSpacing;
+        align-self: unset;
       }
     }
 
